# academic_projects

./: CMakeLists.txt  README.md
client/: app.js  index.html  styles.css
core/: card.cpp  card.h  deck.cpp  deck.h  evaluator.cpp  evaluator.h  hand.cpp  hand.h  secure_rng.cpp  secure_rng.h  sha256.cpp  sha256.h  shuffle.cpp  shuffle.h
include/seka/: card.h  deck.h  game.h  hand.h  rules.h  ui.h
server/: main.cpp  models.h  protocol.cpp  protocol.h  random_util.cpp  random_util.h  room_manager.cpp  room_manager.h  server.cpp  server.h  server_state.cpp  server_state.h  session.cpp  session.h  table_logic.cpp  table_logic.h  tournament_manager.cpp  tournament_manager.h
src/: card.cpp  deck.cpp  game.cpp  hand.cpp  main.cpp  rules.cpp  ui.cpp
tests/: test_rules.cpp  test_shuffle.cpp  test_tournament.cpp
